[gd_scene load_steps=8 format=3 uid="uid://dnkyfgeg0tpeb"]

[ext_resource type="Texture2D" uid="uid://dsx3a4ms0tiae" path="res://assets/fonts/panel_theme.png" id="1_6taqd"]
[ext_resource type="Theme" uid="uid://cjhr8kmmfs2no" path="res://assets/fonts/label_theme.tres" id="1_bpgty"]
[ext_resource type="Script" uid="uid://021s3an1u7uo" path="res://scenes/options_pane.gd" id="1_eq6ja"]
[ext_resource type="Theme" uid="uid://phtncaa76ox1" path="res://assets/fonts/theme for buttons.tres" id="2_eq6ja"]
[ext_resource type="Theme" uid="uid://ctfajrfwf0hp4" path="res://assets/fonts/slider_theme.tres" id="4_6ww1o"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_u7feo"]
texture = ExtResource("1_6taqd")
expand_margin_left = 84.0
expand_margin_top = 56.0
expand_margin_right = 141.0
expand_margin_bottom = 84.0

[sub_resource type="Theme" id="Theme_6fy3x"]
Panel/styles/panel = SubResource("StyleBoxTexture_u7feo")

[node name="OptionsPane" type="Panel"]
anchors_preset = -1
anchor_top = 0.012
anchor_right = 0.943
anchor_bottom = 0.94
offset_left = 65.0
offset_top = 6.224
offset_right = -66.3361
offset_bottom = -6.12006
theme = SubResource("Theme_6fy3x")
script = ExtResource("1_eq6ja")

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 244.0
offset_top = 72.0
offset_right = 736.0
offset_bottom = 179.0
size_flags_horizontal = 4
theme = ExtResource("1_bpgty")
theme_override_constants/line_spacing = -65
theme_override_font_sizes/font_size = 150
text = "OPTIONS
"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 248.0
offset_top = 161.0
offset_right = 746.0
offset_bottom = 214.0
size_flags_horizontal = 4
theme = ExtResource("2_eq6ja")

[node name="EnButton" type="Button" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "EN"

[node name="FrButton" type="Button" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "FR"

[node name="MasterSetting" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 196.0
offset_top = 227.0
offset_right = 821.0
offset_bottom = 275.0
theme_override_constants/separation = 100

[node name="Label" type="Label" parent="MasterSetting"]
layout_mode = 2
theme = ExtResource("1_bpgty")
theme_override_font_sizes/font_size = 50
text = "MENU_AUDIO_MASTER"

[node name="HSlider" type="HSlider" parent="MasterSetting"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("4_6ww1o")
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicSetting" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 187.0
offset_top = 303.0
offset_right = 811.0
offset_bottom = 351.0
theme_override_constants/separation = 100

[node name="Label" type="Label" parent="MusicSetting"]
layout_mode = 2
theme = ExtResource("1_bpgty")
theme_override_font_sizes/font_size = 50
text = "MENU_LABEL_MUSIC"

[node name="HSlider" type="HSlider" parent="MusicSetting"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("4_6ww1o")
max_value = 1.0
step = 0.01
value = 1.0

[node name="SFXSetting" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 232.0
offset_top = 327.0
offset_right = 838.0
offset_bottom = 472.0
theme_override_constants/separation = 100

[node name="Label" type="Label" parent="SFXSetting"]
layout_mode = 2
theme = ExtResource("1_bpgty")
theme_override_font_sizes/font_size = 50
text = "CREDITS_SFX"

[node name="HSlider" type="HSlider" parent="SFXSetting"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("4_6ww1o")
max_value = 1.0
step = 0.01
value = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.085
anchor_top = 0.585
anchor_right = 0.234
anchor_bottom = 0.585
offset_left = 33.68
offset_top = 81.64
offset_right = 680.973
offset_bottom = 121.64

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_bpgty")
theme_override_font_sizes/font_size = 50
text = "MENU_OPTIONS_FULLSCREEN"

[node name="FullScreen" type="CheckBox" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4

[node name="SaveButton" type="Button" parent="."]
layout_mode = 2
offset_left = 254.0
offset_top = 495.0
offset_right = 735.0
offset_bottom = 548.0
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
theme = ExtResource("2_eq6ja")
text = "MENU_IO_SAVE"

[connection signal="pressed" from="HBoxContainer2/EnButton" to="." method="_on_en_button_pressed"]
[connection signal="pressed" from="HBoxContainer2/FrButton" to="." method="_on_fr_button_pressed"]
[connection signal="value_changed" from="MasterSetting/HSlider" to="." method="_on_h_slider_master_value_changed"]
[connection signal="value_changed" from="MusicSetting/HSlider" to="." method="_on_h_slider_music_value_changed"]
[connection signal="value_changed" from="SFXSetting/HSlider" to="." method="_on_h_slider_sfx_value_changed"]
[connection signal="toggled" from="HBoxContainer/FullScreen" to="." method="_on_full_screen_toggled"]
[connection signal="pressed" from="SaveButton" to="." method="_on_save_button_pressed"]
